registry/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - registry.jarnix.com
    secretName: letsencrypt-secret-staging
  rules:
  - host: registry.jarnix.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
